--- a/2일차_크롤링/1. naver_weather.ipynb
+++ b/2일차_크롤링/1. naver_weather.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "id": "3e966ba8",
    "metadata": {},
    "outputs": [
@@ -19,24 +19,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: selenium in c:\\users\\hde10\\anaconda3\\lib\\site-packages (4.5.0)\n",
+      "Requirement already satisfied: selenium in c:\\users\\hde10\\anaconda3\\lib\\site-packages (4.5.0)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
       "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from selenium) (2022.9.14)\n",
       "Requirement already satisfied: urllib3[socks]~=1.26 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from selenium) (1.26.11)\n",
-      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from selenium) (0.9.2)\n",
       "Requirement already satisfied: trio~=0.17 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from selenium) (0.22.0)\n",
-      "Requirement already satisfied: cffi>=1.14 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.15.1)\n",
-      "Requirement already satisfied: sniffio in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
-      "Requirement already satisfied: outcome in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (21.4.0)\n",
-      "Requirement already satisfied: async-generator>=1.9 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.10)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from selenium) (0.9.2)\n",
       "Requirement already satisfied: sortedcontainers in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.0rc9 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.0.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.15.1)\n",
+      "Requirement already satisfied: async-generator>=1.9 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.10)\n",
       "Requirement already satisfied: idna in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (3.3)\n",
+      "Requirement already satisfied: outcome in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.0rc9 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.0.0)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (21.4.0)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
       "Requirement already satisfied: wsproto>=0.14 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
       "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from urllib3[socks]~=1.26->selenium) (1.7.1)\n",
       "Requirement already satisfied: pycparser in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
-      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\hde10\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "id": "bf52fd5d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "id": "4a66d128",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "id": "d1cdbb7b",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "id": "0c74b235",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "id": "ed4c96d5",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "id": "fc96b773",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "id": "8e866702",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "id": "6b3bd71b",
    "metadata": {},
    "outputs": [],
@@ -126,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 45,
    "id": "847334fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"f7cc5248fddb16d7adc6d2441238e8b4\", element=\"64bd623f-b0ff-4b2a-a463-589ecfce5be0\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"dce2484171d89604b3c052222c3854c6\", element=\"41195e9f-d436-46bc-b222-0fb289f3b87a\")>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 46,
    "id": "1ee03c4e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11.7°'"
+       "'11.9°'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 47,
    "id": "4e680efc",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "'°'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 48,
    "id": "bfb5ffaf",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 49,
    "id": "9b9e1669",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 50,
    "id": "0ae2d9f3",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 51,
    "id": "7f95461e",
    "metadata": {},
    "outputs": [],
@@ -230,17 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 52,
    "id": "e47d14e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1,425.50'"
+       "'1,431.00'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 53,
    "id": "d5b2e089",
    "metadata": {},
    "outputs": [],
@@ -277,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 54,
    "id": "aab22ff8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'[올쇼TV] \"FortiSOAR를 활용한 자동화 위협 대응 사례\" 11월 2일 웨비나 생방송'"
+       "'일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 55,
    "id": "3ec2db27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"오픈베이스는 11월 2일(수) 14시부터 전자신문 웨비나 전문 방송 올쇼TV에서 'FortiSOAR를 활용한 자동화 위협 대응 사례'를 주제로 웨비나를 진행...\""
+       "'일본 도쿄도립대 연구팀이 편의점과 공공시설 내 화장실 청소를 자동화할 수 있는 로봇시스템을 개발했다고 테크엑스플로어가 28일(현지 시각) 보도...'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,17 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 56,
    "id": "6eb0e0a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.etnews.com/20221018000152'"
+       "'http://www.irobotnews.com/news/articleView.html?idxno=29933'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,26 +348,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 57,
    "id": "f29986bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['[올쇼TV] \"FortiSOAR를 활용한 자동화 위협 대응 사례\" 11월 2일 웨비나 생방송',\n",
-       " '세일포인트, AI인텔리전스·자동화·통합으로 아이덴티티 보안 강화',\n",
-       " 'H2O호스피탈리티, 알펜시아에 예약자동화·스마트체크인 제공',\n",
-       " '창원공동물류센터, 첨단 자동화 설비 갖춘 스마트물류센터로',\n",
-       " '한화생명, 자동화 기술 특허 취득 ‘설계부터 청약까지 로봇이’',\n",
-       " '세일포인트 “AI 기반 자동화된 아이덴티티 보안 방식으로 변화 ...',\n",
-       " '[로보월드] 자동차 시트 프레임 검사 자동화, 작업자 부담 낮춰',\n",
-       " '산업 자동화 소프트웨어 시장: 2022년에 대한 3가지 대담한 전망 ...',\n",
-       " \"MS의 B2B 전략 '초자동화 통한 생산성의 극대화' (이그나이트 ...\",\n",
-       " '롯데홈쇼핑, 이천 물류센터 오픈...로봇기반 첨단 자동화시스템 도입']"
+       "['일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발',\n",
+       " '[팝콘뉴스] NH투자증권, 업계 최초 솔루션지능형 자동화기기 ...',\n",
+       " '전력구 안전성 평가 자동화·디지털화 기술개발 추진',\n",
+       " \"[인터뷰] “AI 인지검색 솔루션 '알리', 업무 자동화의 좋은 파트너 ...\",\n",
+       " '롯데홈쇼핑, 이천 물류센터 오픈...최첨단 자동화 시스템 갖춰',\n",
+       " \"로봇 기반 자동화 시스템으로…롯데홈쇼핑, '스마트 풀필먼트' 구축\",\n",
+       " '롯데홈쇼핑, 이천 물류센터 오픈...로봇기반 첨단 자동화시스템 도입',\n",
+       " \"'5분이면 청약 끝'…한화생명, 청약자동화 솔루션 특허 취득\",\n",
+       " '농식품 우수벤처에 한약제조 자동화한 카멜로테크',\n",
+       " \"[사진] 자동화 시설 자랑하는 中 '26층 돼지 사육 빌딩'\"]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 58,
    "id": "7c6945c8",
    "metadata": {},
    "outputs": [
@@ -392,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['[올쇼TV] \"FortiSOAR를 활용한 자동화 위협 대응 사례\" 11월 2일 웨비나 생방송', '세일포인트, AI인텔리전스·자동화·통합으로 아이덴티티 보안 강화', 'H2O호스피탈리티, 알펜시아에 예약자동화·스마트체크인 제공', '창원공동물류센터, 첨단 자동화 설비 갖춘 스마트물류센터로', '한화생명, 자동화 기술 특허 취득 ‘설계부터 청약까지 로봇이’', '세일포인트 “AI 기반 자동화된 아이덴티티 보안 방식으로 변화 ...', '[로보월드] 자동차 시트 프레임 검사 자동화, 작업자 부담 낮춰', '산업 자동화 소프트웨어 시장: 2022년에 대한 3가지 대담한 전망 ...', \"MS의 B2B 전략 '초자동화 통한 생산성의 극대화' (이그나이트 ...\", '롯데홈쇼핑, 이천 물류센터 오픈...로봇기반 첨단 자동화시스템 도입']\n",
-      "[\"오픈베이스는 11월 2일(수) 14시부터 전자신문 웨비나 전문 방송 올쇼TV에서 'FortiSOAR를 활용한 자동화 위협 대응 사례'를 주제로 웨비나를 진행...\", '세일포인트가 AI로 구동되는 인텔리전스 기능에 자동화, 통합 기능을 합친 새로운 아이텐티티 보안 클라우드를 선보였다.', 'H2O호스피탈리티, 알펜시아에 예약자동화·스마트체크인 제공 - 매일경제, 섹션-business.', '(창원=연합뉴스) 김선경 기자 = 경남 창원국가산업단지 공동물류센터가 첨단 자동화 설비 등을 갖춘 스마트물류센터로 재탄생했다.', '한화생명이 업계 최초로 보험 신계약 과정을 로봇 기술로 자동화하며 법인대리점(GA) 시장에서의 영업 경쟁력 강화에 나섰다. 한화생명은 보험설계 및...', '“이제는 인간의 능력으로 관리하기에는 너무 많은 아이덴티티가 존재하기 때문에 도구, 특히 자동화된 도구화에 의존해야 한다.”.', '[로보월드] 자동차 시트 프레임 검사 자동화, 작업자 부담 낮춰. 로봇에 카메라 부착해 치수, 패드 부착 등 확인. 기사입력 2022-10-28 17:15:58.', 'AMA Research의 최근 추가된 산업용 자동화 소프트웨어 시장 조사 연구는 2027년까지의 자세한 전망과 정교한 시장 검토를 제공합니다.', '초자동화를 위한 포괄적 인프라. 가트너가 발표한 2022년 최고 전략 기술 경향 리포트11)에서는 두 가지 중요한 점을 이야기하고 있다. 먼저 초자동화가...', '이들은 오픈식 이후 물류센터를 함께 둘러보고 자동화 설비를 시연하는 투어를 진행했다. 이 대표는 축사를 통해 “자동화 물류 시스템 도입은 롯데홈쇼핑...']\n"
+      "['일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발', '[팝콘뉴스] NH투자증권, 업계 최초 솔루션지능형 자동화기기 ...', '전력구 안전성 평가 자동화·디지털화 기술개발 추진', \"[인터뷰] “AI 인지검색 솔루션 '알리', 업무 자동화의 좋은 파트너 ...\", '롯데홈쇼핑, 이천 물류센터 오픈...최첨단 자동화 시스템 갖춰', \"로봇 기반 자동화 시스템으로…롯데홈쇼핑, '스마트 풀필먼트' 구축\", '롯데홈쇼핑, 이천 물류센터 오픈...로봇기반 첨단 자동화시스템 도입', \"'5분이면 청약 끝'…한화생명, 청약자동화 솔루션 특허 취득\", '농식품 우수벤처에 한약제조 자동화한 카멜로테크', \"[사진] 자동화 시설 자랑하는 中 '26층 돼지 사육 빌딩'\"]\n",
+      "['일본 도쿄도립대 연구팀이 편의점과 공공시설 내 화장실 청소를 자동화할 수 있는 로봇시스템을 개발했다고 테크엑스플로어가 28일(현지 시각) 보도...', 'STM은 솔루션 지능형 자동화 기기로 고객들의 고빈도 업무처리를 위해 도입됐으며, 증권사 센터에 설치된 것은 이번이 처음이다.', '이와 함께 인공지능 기술을 기반으로 자동화가 가능하고, 열화정보들을 빅데이터로 관리 및 계량화함으로써 사고를 예측하고 선제적으로 대응해...', 'AI 자동화 통해 업무 생산성 향상. 이창수 대표는 모바일 게임사들을 대상으로 데이터 분석과 마케팅 자동화 솔루션을 제공하는 파이브락스(5Rocks)를...', '자율주행로봇, 무인운반차, 로봇팔 디팔렛타이저 등 최첨단 자동화 설비 도입. 롯데홈쇼핑(대표 이완신)이 난 21일(금) 경기도 이천에서 업계 최초로...', \"롯데홈쇼핑이 업계 최초로 자동화 시스템을 도입해 최첨단 물류 인프라를 구현한 '이천 물류센터'의 문을 열었다. 롯데홈쇼핑은 지난 21일 경기도...\", '이들은 오픈식 이후 물류센터를 함께 둘러보고 자동화 설비를 시연하는 투어를 진행했다. 이 대표는 축사를 통해 “자동화 물류 시스템 도입은 롯데홈쇼핑...', '(서울=연합인포맥스) 정지서 기자 = 한화생명이 업계 최초로 보험 신계약 과정을 로봇 기술로 자동화하며 법인대리점(GA) 시장에서의 영업 경쟁력...', \"카멜로테크는 환자들이 진료 뒤 바로 한약을 받을 수 있도록 한약 제조과정을 자동화했다. 또 한방차를 내려 먹을 수는 한방캡슐 '달이다'도 개발해...\", \"[사진] 자동화 시설 자랑하는 中 '26층 돼지 사육 빌딩'. (중국 우한=신화통신) 26층짜리 돼지 사육 빌딩 내부 돈사를 지난 28일 촬영했다.\"]\n"
      ]
     }
    ],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 59,
    "id": "7c3f3d60",
    "metadata": {},
    "outputs": [
@@ -418,27 +418,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.etnews.com/20221018000152\n",
-      "https://zdnet.co.kr/view/?no=20221027152923\n",
-      "https://www.mk.co.kr/news/business/view/2022/10/956303/\n",
-      "https://www.yna.co.kr/view/AKR20221027042200052\n",
-      "http://mbiz.heraldcorp.com/view.php?ud=20221026000414\n",
-      "https://byline.network/2022/10/28-251/\n",
-      "https://www.kidd.co.kr/news/229877\n",
-      "https://osaek.info/%EC%86%8C%EC%8B%9D/%EC%82%B0%EC%97%85-%EC%9E%90%EB%8F%99%ED%99%94-%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4-%EC%8B%9C%EC%9E%A5-2022%EB%85%84%EC%97%90-%EB%8C%80%ED%95%9C-3%EA%B0%80%EC%A7%80-%EB%8C%80%EB%8B%B4/34008/\n",
-      "https://slownews.kr/87361\n",
-      "https://m.khan.co.kr/economy/market-trend/article/202210241415011\n"
+      "제목 : 일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발\n",
+      "내용 : 일본 도쿄도립대 연구팀이 편의점과 공공시설 내 화장실 청소를 자동화할 수 있는 로봇시스템을 개발했다고 테크엑스플로어가 28일(현지 시각) 보도...\n",
+      "링크 : http://www.irobotnews.com/news/articleView.html?idxno=29933\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -446,26 +429,42 @@
     "\n",
     "link = []\n",
     "for i in links:\n",
-    "    print(i.get_attribute('href'))\n",
+    "    link.append(i.get_attribute('href'))\n",
     "    \n",
-    "print"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c27952db",
-   "metadata": {},
-   "source": [
-    "#4:37:21"
+    "print(\"제목 : \" + title[0])\n",
+    "print(\"내용 : \" + content[0])\n",
+    "print(\"링크 : \" + link[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
+   "id": "3f86cd15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"test.csv\", \"a\", encoding=\"UTF-8-sig\")\n",
+    "file. write(\"{}, {}, {} \\n\".format(\"제목\", \"내용\", \"링크\"))\n",
+    "file. write(\"{}, {}, {} \\n\".format(\"제목2\", \"내용2\", \"링크2\"))\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "6f106548",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file = open(\"google_news.csv\", \"a\", encoding=\"UTF-8-sig\")\n",
+    "\n",
+    "for i in range(len(title)):\n",
+    "    file.write(\"{}, {}, {} \\n\".format(title[i], content[i], link[i]))\n",
+    "\n",
+    "file.close()\n",
+    "\n",
+    "#5:21:25"
+   ]
   },
   {
    "cell_type": "code",
