날씨, 뉴스 크롤링
(1) 날씨 크롤링
(2) 뉴스 크롤링
(3) 크롤링한 데이터 excel 파일로 만들기

--- a/2일차_크롤링/1. naver_weather.ipynb
+++ b/2일차_크롤링/1. naver_weather.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "bf52fd5d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "4a66d128",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "d1cdbb7b",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "0c74b235",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "ed4c96d5",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "fc96b773",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "8e866702",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "6b3bd71b",
    "metadata": {},
    "outputs": [],
@@ -126,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "847334fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"dce2484171d89604b3c052222c3854c6\", element=\"41195e9f-d436-46bc-b222-0fb289f3b87a\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"852aca2cbd8b7b074f445884d65535a0\", element=\"da8737a8-5d26-45b7-a780-5c9063ea9be2\")>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "1ee03c4e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11.9°'"
+       "'15.8°'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "4e680efc",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "'°'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "bfb5ffaf",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "9b9e1669",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "0ae2d9f3",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "7f95461e",
    "metadata": {},
    "outputs": [],
@@ -230,17 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "e47d14e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1,431.00'"
+       "'1,418.70'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "id": "d5b2e089",
    "metadata": {},
    "outputs": [],
@@ -277,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "aab22ff8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발'"
+       "'[2022 방화벽 정책관리 리포트] 자동화·모듈화·커스터마이징, 3가지 키워드로 시장 공략'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "id": "3ec2db27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'일본 도쿄도립대 연구팀이 편의점과 공공시설 내 화장실 청소를 자동화할 수 있는 로봇시스템을 개발했다고 테크엑스플로어가 28일(현지 시각) 보도...'"
+       "'최근 방화벽 정책관리 솔루션에 관심이 모아지고 있다. 방화벽 정책관리 솔루션은 기업 내부에서 수립한 방화벽 정책을 자동으로 적용해주고,...'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,17 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "id": "6eb0e0a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://www.irobotnews.com/news/articleView.html?idxno=29933'"
+       "'http://www.boannews.com/media/view.asp?idx=111134'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,26 +348,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "id": "f29986bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발',\n",
-       " '[팝콘뉴스] NH투자증권, 업계 최초 솔루션지능형 자동화기기 ...',\n",
-       " '전력구 안전성 평가 자동화·디지털화 기술개발 추진',\n",
-       " \"[인터뷰] “AI 인지검색 솔루션 '알리', 업무 자동화의 좋은 파트너 ...\",\n",
-       " '롯데홈쇼핑, 이천 물류센터 오픈...최첨단 자동화 시스템 갖춰',\n",
-       " \"로봇 기반 자동화 시스템으로…롯데홈쇼핑, '스마트 풀필먼트' 구축\",\n",
-       " '롯데홈쇼핑, 이천 물류센터 오픈...로봇기반 첨단 자동화시스템 도입',\n",
-       " \"'5분이면 청약 끝'…한화생명, 청약자동화 솔루션 특허 취득\",\n",
-       " '농식품 우수벤처에 한약제조 자동화한 카멜로테크',\n",
-       " \"[사진] 자동화 시설 자랑하는 中 '26층 돼지 사육 빌딩'\"]"
+       "['[2022 방화벽 정책관리 리포트] 자동화·모듈화·커스터마이징 3가지 키워드로 시장 공략',\n",
+       " \"NH투자證 '지능형 자동화기기' 도입…수수료 한시 면제\",\n",
+       " \"제조공정 자동화 · 해외안전성 시험 인증… 수소탱크 시장 '진격'\",\n",
+       " '[단신]한화생명 보험 청약 자동화 솔루션 특허 취득 外',\n",
+       " \"한화그룹 공장 자동화 설비 전문 계열사 '한화컨버전스'로 새출발…재생에너지 플랫폼 진출\",\n",
+       " \"[사진] 자동화 시설 자랑하는 中 '26층 돼지 사육 빌딩'\",\n",
+       " '경남은행 CU편의점과 자동화기기 제휴…고객 접근성 확대',\n",
+       " \"NH투자證 '지능형 자동화기기' 도입…수수료 한시 면제\",\n",
+       " '일본 도쿄도립대 편의점 화장실 자동화 로봇 개발',\n",
+       " \"'2022 국제 공구 및 스마트 용접 자동화전' 18일 개막\"]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,24 +377,37 @@
     "\n",
     "title = []\n",
     "for i in titles:\n",
-    "    title.append(i.text)\n",
+    "    temp_title = i.text\n",
+    "    temp_title = temp_title.replace(\",\", \"\")\n",
+    "    title.append(temp_title)\n",
     "\n",
     "title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "id": "7c6945c8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발', '[팝콘뉴스] NH투자증권, 업계 최초 솔루션지능형 자동화기기 ...', '전력구 안전성 평가 자동화·디지털화 기술개발 추진', \"[인터뷰] “AI 인지검색 솔루션 '알리', 업무 자동화의 좋은 파트너 ...\", '롯데홈쇼핑, 이천 물류센터 오픈...최첨단 자동화 시스템 갖춰', \"로봇 기반 자동화 시스템으로…롯데홈쇼핑, '스마트 풀필먼트' 구축\", '롯데홈쇼핑, 이천 물류센터 오픈...로봇기반 첨단 자동화시스템 도입', \"'5분이면 청약 끝'…한화생명, 청약자동화 솔루션 특허 취득\", '농식품 우수벤처에 한약제조 자동화한 카멜로테크', \"[사진] 자동화 시설 자랑하는 中 '26층 돼지 사육 빌딩'\"]\n",
-      "['일본 도쿄도립대 연구팀이 편의점과 공공시설 내 화장실 청소를 자동화할 수 있는 로봇시스템을 개발했다고 테크엑스플로어가 28일(현지 시각) 보도...', 'STM은 솔루션 지능형 자동화 기기로 고객들의 고빈도 업무처리를 위해 도입됐으며, 증권사 센터에 설치된 것은 이번이 처음이다.', '이와 함께 인공지능 기술을 기반으로 자동화가 가능하고, 열화정보들을 빅데이터로 관리 및 계량화함으로써 사고를 예측하고 선제적으로 대응해...', 'AI 자동화 통해 업무 생산성 향상. 이창수 대표는 모바일 게임사들을 대상으로 데이터 분석과 마케팅 자동화 솔루션을 제공하는 파이브락스(5Rocks)를...', '자율주행로봇, 무인운반차, 로봇팔 디팔렛타이저 등 최첨단 자동화 설비 도입. 롯데홈쇼핑(대표 이완신)이 난 21일(금) 경기도 이천에서 업계 최초로...', \"롯데홈쇼핑이 업계 최초로 자동화 시스템을 도입해 최첨단 물류 인프라를 구현한 '이천 물류센터'의 문을 열었다. 롯데홈쇼핑은 지난 21일 경기도...\", '이들은 오픈식 이후 물류센터를 함께 둘러보고 자동화 설비를 시연하는 투어를 진행했다. 이 대표는 축사를 통해 “자동화 물류 시스템 도입은 롯데홈쇼핑...', '(서울=연합인포맥스) 정지서 기자 = 한화생명이 업계 최초로 보험 신계약 과정을 로봇 기술로 자동화하며 법인대리점(GA) 시장에서의 영업 경쟁력...', \"카멜로테크는 환자들이 진료 뒤 바로 한약을 받을 수 있도록 한약 제조과정을 자동화했다. 또 한방차를 내려 먹을 수는 한방캡슐 '달이다'도 개발해...\", \"[사진] 자동화 시설 자랑하는 中 '26층 돼지 사육 빌딩'. (중국 우한=신화통신) 26층짜리 돼지 사육 빌딩 내부 돈사를 지난 28일 촬영했다.\"]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['최근 방화벽 정책관리 솔루션에 관심이 모아지고 있다. 방화벽 정책관리 솔루션은 기업 내부에서 수립한 방화벽 정책을 자동으로 적용해주고...',\n",
+       " '[서울=뉴시스] 박은비 기자 = NH투자증권은 고객의 최적화된 업무 처리를 위해 솔루션 지능형 자동화기기(STM)를 도입했다고 31일 밝혔다.',\n",
+       " '인천주안공단 롯데케미칼 수소탱크 파일럿(시험생산) 공장에서 관계자가 공정 자동화 기술을 설명하고 있다. 롯데그룹 제공...',\n",
+       " \"한화생명 보험 청약 자동화 솔루션 특허 취득 한화생명의 보험 설계 및 청약 업무 자동화 기술인 '청약 자동화 솔루션'이 최근 특허청으로부터...\",\n",
+       " \"한화에너지 자회사인 ㈜에스아이티가 사명을 '한화컨버전스' 로 변경하고 재생에너지 플랫폼사업을 추진한다고 1일 밝혔다. 한화컨버전스는 새 사명에...\",\n",
+       " '[신화/내외뉴스통신] 이송옥 기자26층짜리 돼지 사육 빌딩 내부 돈사를 지난 28일 촬영했다. 후베이(湖北)성 어저우(鄂州)시에 26층짜리 돼지 사육...',\n",
+       " \"(경남=뉴스1) 김대광 기자 = BNK경남은행은 한국전자금융㈜과 'CU편의점 자동화기기(CD/ATM) 제휴'를 맺었다고 1일 밝혔다.이번 제휴로 BNK경남은행...\",\n",
+       " 'NH투자증권은 고객의 최적화된 업무 처리를 위해 솔루션 지능형 자동화기기(STM)를 도입했다고 31일 밝혔다. 은행에서 활용하던 STM을 증권사 센터에...',\n",
+       " '일본 도쿄도립대 연구팀이 편의점과 공공시설 내 화장실 청소를 자동화할 수 있는 로봇시스템을 개발했다고 테크엑스플로어가 28일(현지 시각) 보도...',\n",
+       " \"국내외 최첨단 공구 및 스마트 용접 자동화 기기 등을 한눈에 볼 수 ... 자동화전'(TOOL TECH + SMART WELDING AUTOMATION FAIR)이 이달 18일부터 21...\"]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -402,15 +415,16 @@
     "\n",
     "content = []\n",
     "for i in contents:\n",
-    "    content.append(i.text)\n",
+    "    temp_content = i.text\n",
+    "    temp_content = temp_content.replace(\",\", \"\")\n",
+    "    content.append(temp_content)\n",
     "\n",
-    "print(title)\n",
-    "print(content)"
+    "content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "id": "7c3f3d60",
    "metadata": {},
    "outputs": [
@@ -418,9 +432,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "제목 : 일본 도쿄도립대, 편의점 화장실 자동화 로봇 개발\n",
-      "내용 : 일본 도쿄도립대 연구팀이 편의점과 공공시설 내 화장실 청소를 자동화할 수 있는 로봇시스템을 개발했다고 테크엑스플로어가 28일(현지 시각) 보도...\n",
-      "링크 : http://www.irobotnews.com/news/articleView.html?idxno=29933\n"
+      "제목 : [2022 방화벽 정책관리 리포트] 자동화·모듈화·커스터마이징 3가지 키워드로 시장 공략\n",
+      "내용 : 최근 방화벽 정책관리 솔루션에 관심이 모아지고 있다. 방화벽 정책관리 솔루션은 기업 내부에서 수립한 방화벽 정책을 자동으로 적용해주고...\n",
+      "링크 : http://www.boannews.com/media/view.asp?idx=111134\n"
      ]
     }
    ],
@@ -438,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "id": "3f86cd15",
    "metadata": {},
    "outputs": [],
@@ -451,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "id": "6f106548",
    "metadata": {},
    "outputs": [],
@@ -461,9 +475,7 @@
     "for i in range(len(title)):\n",
     "    file.write(\"{}, {}, {} \\n\".format(title[i], content[i], link[i]))\n",
     "\n",
-    "file.close()\n",
-    "\n",
-    "#5:21:25"
+    "file.close()"
    ]
   },
   {
