--- a/2일차_크롤링/1. naver_weather.ipynb
+++ b/2일차_크롤링/1. naver_weather.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "bf52fd5d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "4a66d128",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "d1cdbb7b",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "0c74b235",
    "metadata": {},
    "outputs": [],
@@ -479,12 +479,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4445a8be",
+   "metadata": {},
+   "source": [
+    "# 네이버 환율 데이터 크롤링"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "694748ce",
+   "execution_count": 57,
+   "id": "e5aa44f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.get(\"https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%EB%84%A4%EC%9D%B4%EB%B2%84%ED%99%98%EC%9C%A8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "5e3d848b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "통화명\n",
+      "미국 USD\n",
+      "일본 JPY 100\n",
+      "유럽연합 EUR\n",
+      "중국 CNY\n",
+      "영국 GBP\n",
+      "호주 AUD\n",
+      "캐나다 CAD\n",
+      "뉴질랜드 NZD\n"
+     ]
+    }
+   ],
+   "source": [
+    "table = browser.find_element(By.CLASS_NAME, 'rate_table_bx')\n",
+    "rows = table.find_elements(By.TAG_NAME, 'tr')\n",
+    "\n",
+    "for row in rows:\n",
+    "    country_name = row.find_element(By.TAG_NAME, 'th').text\n",
+    "    print(country_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a14afdd",
+   "metadata": {},
+   "source": [
+    "## 표 크롤링 하고 엑셀로 저장, 뉴스 10페이지까지 크롤링하기"
+   ]
   }
  ],
  "metadata": {
