구글 뉴스 크롤링
(1) 단건 뉴스 크롤링
(2) 1페이지 뉴스 크롤링 (10개)
(3) 10페이지까지 뉴스 크롤링

--- a/2일차_크롤링/2. google_news.ipynb
+++ b/2일차_크롤링/2. google_news.ipynb
@@ -272,8 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "4bfd7d07",
+   "execution_count": 34,
+   "id": "1d502a5e",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "'이름 : leo, 나이 : 30'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "38f69e3a",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "23b9b706",
    "metadata": {},
    "outputs": [
@@ -315,13 +315,41 @@
      "text": [
       "크롤링하고자 하는 단어를 입력하세요.날씨\n",
       "크롤링하고자 하는 페이지 수를 입력하세요.3\n",
-      "https://www.google.com/search?q=날씨&tbs=qdr:d&tbm=nws&ei=gwliY6bcEcXu2roPgZqz0As&start=0&sa=N&ved=2ahUKEwjmqZ7t6o77AhVFt1YBHQHNDLoQ8tMDegQIARAE&biw=1536&bih=708&dpr=1.25\n",
-      "https://www.google.com/search?q=날씨&tbs=qdr:d&tbm=nws&ei=gwliY6bcEcXu2roPgZqz0As&start=10&sa=N&ved=2ahUKEwjmqZ7t6o77AhVFt1YBHQHNDLoQ8tMDegQIARAE&biw=1536&bih=708&dpr=1.25\n",
-      "https://www.google.com/search?q=날씨&tbs=qdr:d&tbm=nws&ei=gwliY6bcEcXu2roPgZqz0As&start=20&sa=N&ved=2ahUKEwjmqZ7t6o77AhVFt1YBHQHNDLoQ8tMDegQIARAE&biw=1536&bih=708&dpr=1.25\n"
+      "[날씨] 내일 낮부터 찬바람…금요일 서울 최저 0도\n",
+      "[날씨] 밤사이 내륙 짙은 안개…내일 낮부터 찬바람\n",
+      "[날씨] 내일 낮 찬바람, 기온 '뚝'‥공기 다시 맑아져\n",
+      "[오늘날씨]기온 뚝뚝 아침 최저 0도, 강원 영하권 추위, 오후엔 ...\n",
+      "완연한 가을날씨 제주지방 4일부터 쌀쌀\n",
+      "[날씨] 낮 동안 온화…내일부터 점차 추워져\n",
+      "[날씨] 내일 낮부터 찬바람…밤사이 내륙 짙은 안개\n",
+      "[날씨] 전국 맑지만 일교차 커…내일 낮부터 기온 낮아져\n",
+      "구름많은 하늘…경기북부·강원영서 약한 비\n",
+      "[날씨] 충청 이남 대기 질 탁해...한낮 선선, 큰 일교차\n",
+      "[날씨] 출근길 안개 주의…일교차 '10도 이상'\n",
+      "[날씨] 내일 한낮 쌀쌀, 서울 12도…내륙 짙은 안개\n",
+      "[날씨] 공기 다시 맑아져‥미세먼지 '좋음~보통'\n",
+      "대체로 맑음…평안도·함경도는 흐림\n",
+      "[날씨] 낮 동안 온화…내일부터 점차 추워져\n",
+      "[내일날씨] 낮부터 찬바람 불며 기온 '뚝'\n",
+      "[오늘날씨] 전국 대체로 맑음…큰 일교차 '주의'\n",
+      "전국 구름 많음…서울 낮 최고 12도\n",
+      "[날씨] 서울 낮 '17도'까지 올라…내륙 곳곳에 옅은 안개\n",
+      "[날씨] 내일 낮부터 찬바람…금요일 서울 최저 0도\n",
+      "[날씨] 내일 낮부터 찬바람…금요일 서울 최저 0도\n",
+      "[오늘 날씨] 대체로 맑고 포근...내일 낮부터 찬공기 남하 '쌀쌀'\n",
+      "오늘의 날씨- 2022년 11월 3일\n",
+      "부산, 대체로 맑은 날씨…낮 최고 23도 전망\n",
+      "[날씨] 내일 낮부터 찬바람…밤사이 내륙 짙은 안개\n",
+      "[날씨] 구름많은 하늘…경기북부·강원영서 약한 비\n",
+      "[북한날씨] 대체로 맑음…평안도·함경도는 흐림\n",
+      "[날씨] 오늘(수)도 한낮 온화, 일교차 커… 내일 낮부터 찬바람\n",
+      "세계의 날씨(11월2일)\n",
+      "[조문경의 날씨] 아침 쌀쌀, 한낮 온화…모레부터 기온 떨어져\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
     "search_word = input(\"크롤링하고자 하는 단어를 입력하세요.\")\n",
     "page = int(input(\"크롤링하고자 하는 페이지 수를 입력하세요.\"))\n",
     "\n",
@@ -329,15 +357,21 @@
     "\n",
     "for i in range(0, page * 10 ,10):\n",
     "    final_url = url.format(search_word, i)\n",
-    "    print(final_url)\n",
-    "\n",
-    "#1:37:21"
+    "    \n",
+    "    browser.get(final_url)\n",
+    "    time.sleep(3)\n",
+    "    browser.implicitly_wait(5) # 5초를 기다려도 안되면 오류를 뱉어내고, 그전에 로딩이 되면 진행해도 됨을 의미.\n",
+    "    \n",
+    "    titles = browser.find_elements(By.CLASS_NAME, 'mCBkyc')\n",
+    "    \n",
+    "    for title in titles:\n",
+    "        print(title.text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7d1ff2b6",
+   "id": "1c2ad759",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46390328",
+   "id": "55f9c4cf",
    "metadata": {},
    "outputs": [],
    "source": []
